fix: bug on Post.css property visibily does not working on safari

--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -9,7 +9,7 @@
 }
 .content {
   line-height: 1.6;
-  color: var(---gray-300);
+  color: var(--gray-300);
   margin-top: 1.5rem;
 }
 
@@ -86,7 +86,10 @@
   margin-top: 1rem;
 }
 
-.commentForm footer {
+/****** CSS NOT WORKING ON SAFARI ******/
+/*********** PLEASE FIX IT *************/
+
+/* .commentForm footer {
   visibility: hidden;
   max-height: 0;
 }
@@ -94,7 +97,7 @@
 .commentForm:focus-within footer {
   visibility: visible;
   max-height: none;
-}
+} */
 
 .commentForm button[type="submit"] {
   padding: 1rem 1.5rem;
